# codex-tool-mock

./: LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: publishing.md  usage.md
plugin/.codex-plugin/: plugin.json
plugin/hooks/: hooks.json
src/codex_tool_mock/: cli.py  hook.py  install.py  pytest.py  store.py
src/codex_tool_mocks/: __init__.py  cli.py  hook.py  install.py  matchers.py  pytest.py  responders.py
src/codex_tool_mocks/plugin/hooks/: hooks.json
tests/: test_hook.py  test_install.py  test_matchers.py  test_pytest_helpers.py
