[project]
name = "codex-tool-mocks"
version = "0.1.0"
description = "Codex plugin and CLI for mocking shell-like tool calls in skill and agent tests."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "codex-tool-mocks contributors" }]
dependencies = []

[project.scripts]
codex-tool-mocks = "codex_tool_mocks.cli:main"
codex-tool-mocks-hook = "codex_tool_mocks.hook:main"

[dependency-groups]
dev = [
    "coverage>=7.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_tool_mocks"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
