[project]
name = "codex-tool-mock"
version = "0.1.0"
description = "Codex plugin and CLI for mocking shell-like tool calls in skill and agent tests."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "codex-tool-mock contributors" }]
dependencies = []

[project.scripts]
codex-tool-mock = "codex_tool_mock.cli:main"
codex-tool-mock-hook = "codex_tool_mock.hook:main"

[dependency-groups]
dev = [
    "coverage>=7.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_tool_mock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
